[package]
name = "arpack-ng-sys"
version = "0.1.2-alpha.0"
authors = ["Daniel Hauck <mail@dhauck.eu>"]
edition = "2018"
build = "build.rs"
description = "Bindings to arpack-ng."
homepage = "https://gitlab.com/solidtux-rust/arpack-ng-sys"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1.42"
bindgen = "0.53.2"
