[package]
name = "arpack-ng-sys"
version = "0.2.1-alpha.0"
authors = ["Daniel Hauck <mail@dhauck.eu>"]
edition = "2018"
build = "build.rs"
description = "Bindings to arpack-ng."
homepage = "https://gitlab.com/solidtux-rust/arpack-ng-sys"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["static"]
static = ["cmake"]
system = ["pkg-config"]

[dependencies]

[build-dependencies]
bindgen = "0.66.1"


[build-dependencies.cmake]
version = "0.1"
optional = true

[build-dependencies.pkg-config]
version = "0.3"
optional = true
